update for grpc restful and local APIs
